--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,14 @@ header {
 }
 .menu li a {
     text-decoration: none;
-    color: black;
     font-weight: bolder;
     padding: 10px;
     border-radius: 20px;
     transition: 0.5s ease;
+    color: black;
+}
+.active-menu {  
+    background-color: white;
 }
 
 .menu a:hover {
@@ -50,11 +53,12 @@ main {
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 10px;
+    width: 400px;
 }
-#experienceList h2:first-of-type {
+#experienceList h2 {
     text-transform: uppercase;
 }
-#experienceList h2:last-of-type {
+#experienceList h3 {
     margin-bottom: 20px;
 }
 #experienceList p:last-of-type {
@@ -74,4 +78,41 @@ main {
 }
 .delete-btn:hover {
     background-color: red;
+}
+
+#expForm {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    background-color: #333;
+    color: white;
+    padding: 30px;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 20px;
+}
+#expForm label {
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+#expForm input {
+    margin-bottom: 20px;
+    padding: 7px;
+    border-radius: 7px;
+    font-size: 18px;
+}
+#expForm button {
+    padding: 15px;
+    border-radius: 7px;
+    background-color: green;
+    border: 0px;
+    color: white;
+    cursor: pointer;
+    transition: 0.5s ease;
+    font-size: large;
+    font-weight: bold;
+}
+#expForm button:hover {
+    background-color: rgb(1, 81, 1);
 }
